--- a/src/vibe_frontend/src/index.html
+++ b/src/vibe_frontend/src/index.html
@@ -2,23 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>vibe</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>VIBE Token - Testing 🦄 </title>
     <link type="text/css" rel="stylesheet" href="main.css" />
-  </head>
+    <base href="/" />
+</head>
   <body>
-    <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
-    </main>
+    <div id="root"></div>
+    <!-- <script src="../src/index.jsx" type="text/jsx"></script> -->
   </body>
 </html>
